Updated Jupyter documentation

--- a/TP1/DH_DSA.ipynb
+++ b/TP1/DH_DSA.ipynb
@@ -114,9 +114,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O uso do esquema Encrypt-then-MAC permite garantir a autenticidade, integridade e confidencialidade das mensagens trocadas entre o `Emitter` e o `Receiver`.\n",
-    "Como tal, a cifra simétrica escolhida foi o AES (Advanced Encryption Standard) em modo ECB(Electronic Code Book).\n",
-    "O MAC (Message Authentication Code) escolhido foi o HMAC (Hash-MAC) com SHA-256 que permite, por sua vez, garantir a integridade e autenticidade da mensagem trocada."
+    "O uso do esquema **Encrypt-then-MAC** permite garantir a autenticidade, integridade e confidencialidade das mensagens trocadas entre o `Emitter` e o `Receiver`.\n",
+    "Como tal, a cifra simétrica escolhida foi o **AES** (Advanced Encryption Standard) em modo **ECB**(Electronic Code Book).\n",
+    "O MAC (Message Authentication Code) escolhido foi o **HMAC** (Hash-MAC) com **SHA-256** que permite, por sua vez, garantir a integridade e autenticidade da mensagem trocada."
    ]
   },
   {
@@ -194,17 +194,16 @@
    "source": [
     "## Emitter\n",
     "\n",
-    "O Emiter começa por gerar as chaves privadas, conforme o protocolo de acordo de chaves Diffie-Hellman, armazenando-as em variáveis. De seguida extrai as chaves para assinar e verificar as assinaturas DSA, que estavam armazenadas em ficheiros com nomes alusivos a cada uma dessas operações.\n",
+    "O Emitter começa por gerar a chave partilhada para cifrar as mensagens trocadas com o Receiver, conforme o protocolo de acordo de chaves Diffie-Hellman, armazenando-as em variáveis locais. Adicionalmente, e para prevenir a realização de ataques Man-In-The-Middle que violam a autenticidade das mensagens trocadas durante este protocolo (*Diffie-Hellman*), este recorre a chaves para assinar e verificar as assinaturas DSA, que estavam armazenadas em ficheiros com nomes alusivos a cada uma dessas operações.\n",
     "\n",
-    "Com recurso às funções `sign_message` e `verify_signature` efetua-se nomeadamente a assinatura e a respetiva verificação da mesma. Sendo que a primeira recebe como parâmetros a chave privada para assinar (`sign_key`) e a mensagem `priv_key.public_key()` e a segunda recebe a chave pública (`ver_key`) e a mensagem `g_x`.\n",
+    "Com recurso às funções `sign_message` e `verify_signature` efetua-se nomeadamente a assinatura e a respetiva verificação da mesma. Sendo que a primeira recebe como parâmetros a chave privada usada para assinar (`sign_key`) e a mensagem `msg` e a segunda recebe a chave pública (`ver_key`), a assinatura esperada (`signature`) e a mensagem à qual esta assinatura se refere (`msg`).\n",
     "\n",
-    "Se durante a comunicação Emitter-Receiver não existir nenhuma falha ao nível da verificação da troca de chaves, i.e., se a seguinte coondição: g_x != b\"0\" se verificar, determina-se a chave acordada no  protocolo DH (`s_key`). E recorrendo a esta e à função `deriveKey` gera-se a chave da cifra e a chave do HMAC.\n",
+    "Se durante no protocolod e troca de chaves Emitter-Receiver não ocorrer nenhuma falha ao nível da verificação da troca de chaves, sinalizada pela mensagem b\"0\", determina-se a chave acordada no  protocolo DH (`s_key`). Recorrendo a esta e à função `deriveKey` gera-se a chave da cifra (`c_key`) e a chave do HMAC (`h_key`).\n",
     "\n",
-    "Posteriormente calcula-se o hash do valor do tweak (`tweak_h`) e ainda o HMAC de header + content_new + iv + tweak_h(`m_hmac`). De modo a que a autenticação seja feita via uma *tag* que deve ser introduzida no momento de decifragem dos dados e, caso não corresponda ao valor esperado, resulta numa exceção.\n",
+    "Posteriormente calcula-se o hash do valor do tweak (`tweak_h`) e ainda o HMAC de `header + content_new + iv + tweak_h` que serão armazenados no campo `m_hmac`. Isto permite que a autenticação seja feita via uma *tag* que deve ser utilizada no momento de decifragem dos dados e, caso não corresponda ao valor esperado, resulta numa exceção.\n",
     "\n",
     "Para além da mensagem trocada entre os dois interveniente são ainda enviados dados que permitem a sua decifragem\n",
-    "por parte do `Receiver` nomeadamente o a *tag* esperada\n",
-    "para decifrar os mesmos e ainda os metadados previamente autenticados:\n",
+    "por parte do `Receiver` nomeadamente a *tag* esperada para decifrar os mesmos, o *hash* do tweak utilizado e ainda os metadados previamente autenticados:\n",
     "\n",
     "payload = {'header': header, 'content': content_new, 'm_hmac': m_hmac, 'tweak_h': tweak_h}\n",
     "\n",
