--- a/TP1/ECDH_EDSA.ipynb
+++ b/TP1/ECDH_EDSA.ipynb
@@ -71,13 +71,13 @@
     "### Chaves de longa duração\n",
     "\n",
     "A geração de chaves de longa duração é implementada pela função `genDSAKeyPair` que gera um par de chaves para assinaturas DSA e guarda cada uma em ficheiros **PEM**.\n",
-    "A chave privada é armazenada com recurso ao formato **PKCS8**.\n",
-    "Cada par de chaves é gerado apenas na criação da conexão **i.e.** chamada do construtor da classe `Connection`, mantendo-se constante para ligações estabelecidas na mesma instância da classe."
+    "\n",
+    "A chave privada é armazenada com recurso ao formato **PKCS8** e cada par de chaves é gerado apenas na criação da conexão **i.e.** na chamada do construtor da classe `Connection`, mantendo-se constante para ligações estabelecidas na mesma instância da classe."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,9 +114,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O uso do esquema Encrypt-then-MAC permite garantir a autenticidade, integridade e confidencialidade das mensagens trocadas entre o `Emitter` e o `Receiver`.\n",
-    "Como tal, a cifra simétrica escolhida foi o AES (Advanced Encryption Standard) em modo CFB (Cipher Feedback Mode).\n",
-    "O MAC (Message Authentication Code) escolhido foi o HMAC (Hash-MAC) com SHA-256 que permite, por sua vez, garantir a integridade e autenticidade da mensagem trocada."
+    "O uso do esquema **Encrypt-then-MAC** permite garantir a autenticidade, integridade e confidencialidade das mensagens trocadas entre o `Emitter` e o `Receiver`.\n",
+    "Como tal, a cifra simétrica escolhida foi o **AES** (Advanced Encryption Standard) em modo **ECB** (Electronic Code Book), e o MAC (Message Authentication Code) adoptado foi o **HMAC** (Hash-MAC) com **SHA-256** que, por sua vez, garante a integridade e autenticidade da mensagem trocada.\n",
+    "\n",
+    "As funções que se seguem: `verifyHMA`, `extractMessage`,`deriveKey`, `sign_message`, `verify_signature` e ` tweak_xoring`; estão respetivamente descritas e servem de funções auxiliares durante o processo de comunicação.\n",
+    "\n",
+    "Note-se que o tempo de geração dos parâmetros do protocolo de acordo de chaves Diffie-Hellman, recorrendo ao método generate_parameters( ), era relativamente elevando, tendo-se consequentemente optado por fixar os mesmo, como se verifica de seguida."
    ]
   },
   {
@@ -192,7 +195,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Emitter"
+    "## Emitter\n",
+    "\n",
+    "O Emitter começa por gerar a chave partilhada para cifrar as mensagens trocadas com o Receiver, conforme o protocolo de acordo de chaves *ECDH*, e adoptando a curva *standard NIST P-521*, armazenando-a numa variável local. Adicionalmente, e para prevenir a realização de ataques Man-In-The-Middle, que violam a autenticidade das mensagens trocadas durante o protocolo, este recorre a chaves para assinar e verificar as assinaturas ECDSA, que estavam armazenadas em ficheiros com nomes alusivos a cada uma dessas operações e que têm como referência a a curva *standard NIST P-256*.\n",
+    "\n",
+    "Com recurso às funções `sign_message` e `verify_signature` efetua-se nomeadamente a assinatura e a respetiva verificação da mesma. Sendo que a primeira recebe como parâmetros a chave privada usada para assinar (`sign_key`) e a mensagem `public_key_pem` e a segunda recebe a chave pública (`ver_key`), a assinatura esperada (`sig`) e a mensagem à qual esta assinatura se refere (`msg`).\n",
+    "\n",
+    "Se durante no protocolo de troca de chaves não ocorrer nenhuma falha ao nível da verificação da troca das mesmas, sinalizada pela mensagem b\"0\", determina-se a chave acordada no  protocolo DH (`s_key`). Posteriormente, recorrendo a esta,`s_key`, e à função auxiliar `deriveKey` gera-se a chave da cifra (`c_key`) e a chave do HMAC (`h_key`).\n",
+    "\n",
+    "Seguidamente gerou-se o `tweak`(*nonce*)como uma combinação do tempo no instante atual, em segundos, com 8 *bytes* aleatórios.\n",
+    "\n",
+    "Posteriormente calcula-se o hash do valor do tweak (`tweak_h`) e ainda o HMAC de `header + content_new + iv + tweak_h` que é armazenado no campo `m_hmac`. Tal permite que a autenticação seja feita via uma *tag* que deve ser utilizada no momento de decifragem dos dados e, caso não corresponda ao valor esperado, resulta numa exceção.\n",
+    "\n",
+    "Para além da mensagem trocada entre os dois interveniente são ainda enviados dados que permitem a sua decifragem\n",
+    "por parte do `Receiver` nomeadamente a *tag* esperada para decifrar os mesmos, o *hash* do tweak utilizado e ainda os metadados previamente autenticados:\n",
+    "\n",
+    "payload = {'header': header, 'content': content_new, 'm_hmac': m_hmac, 'tweak_h': tweak_h}"
    ]
   },
   {
@@ -407,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
