--- a/TP1/DH_DSA.ipynb
+++ b/TP1/DH_DSA.ipynb
@@ -114,10 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O uso do esquema **Encrypt-then-MAC** permite garantir a autenticidade, integridade e confidencialidade das mensagens trocadas entre o `Emitter` e o `Receiver`.\n",
-    "Como tal, a cifra simétrica escolhida foi o **AES** (Advanced Encryption Standard) em modo **ECB** (Electronic Code Book), e o MAC (Message Authentication Code) adoptado foi o **HMAC** (Hash-MAC) com **SHA-256** que, por sua vez, garante a integridade e autenticidade da mensagem trocada.\n",
-    "\n",
-    "As funções que se seguem: `verifyHMA`, `extractMessage`,`deriveKey`, `sign_message`, `verify_signature` e ` tweak_xoring`; estão respetivamente descritas e servem de funções auxiliares durante o processo de comunicação.\n",
+    "As funções que se seguem: `verifyTag`, `extractMessage`, `sign_message`, `verify_signature` e `xor_bytes`; estão respetivamente descritas e servem de funções auxiliares durante o processo de comunicação.\n",
     "\n",
     "Note-se que o tempo de geração dos parâmetros do protocolo de acordo de chaves Diffie-Hellman, recorrendo ao método generate_parameters( ), era relativamente elevando, tendo-se consequentemente optado por fixar os mesmo, como se verifica de seguida."
    ]
@@ -151,12 +148,6 @@
     "    ptxt = (decryptor.update(tweak_xoring(ctxt, tweak_h)) + decryptor.finalize())\n",
     "    return tweak_xoring(unpadder.update(ptxt) + unpadder.finalize(), tweak_h)\n",
     "\n",
-    "def deriveKey(key_base, key_size, info):\n",
-    "    \"\"\" Expands key from key_base to key_size bytes\n",
-    "    \"\"\"\n",
-    "    key = HKDF(hashes.SHA256(), length=key_size, salt=None, info=info, backend=default_backend()).derive(key_base)\n",
-    "    return key\n",
-    "\n",
     "def sign_message(priv_key, msg):\n",
     "    \"\"\" Signs a particular message with a given private key\n",
     "    \"\"\"\n",
@@ -178,12 +169,17 @@
     "        msg = bytes(list(msg).extend([0]*pad_size))\n",
     "    return msg\n",
     "    \n",
-    "\n",
     "def parityBlock(tweak_iv, msg_len, bs, parity)\n",
     "    lower_parity = list((msg_len * 16 + 1).to_bytes(bs/2, 'big'))\n",
-    "    block_tweak = bytes(tweak_iv.extend(lower_parity))\n",
+    "    block_tweak = createBlockHash(tweak_iv, lower_parity)\n",
     "    tag_in = xor_bytes(parity, block_tweak, 0, bs)\n",
     "    return (block_tweak, tag_in)\n",
+    "\n",
+    "def createBlockHash(tweak_iv, lower_tweak)\n",
+    "    block_tweak = bytes(tweak_iv.extend(lower_tweak))\n",
+    "    digest = hashes.Hash(hashes.BLAKE2s(16), backend=default_backend())\n",
+    "    digest.update(block_tweak)\n",
+    "    return digest.finalize()\n",
     "    \n",
     "def encrypt_message(msg, tweak_iv, key):\n",
     "    tweak_iv = list(tweak_iv)\n",
@@ -193,12 +189,10 @@
     "    ctxt = bytes()\n",
     "    \n",
     "    for i in range(0, len(pad_msg), bs):\n",
-    "        parity = xor_bytes(pad_msg, parity, i, bs)\n",
-    "        \n",
-    "        lower_tweak = list((i*2).to_bytes(bs/2, 'big'))     # convert i*2 to binary format\n",
-    "        block_tweak = bytes(tweak_iv.extend(lower_tweak))\n",
+    "        parity = xor_bytes(pad_msg, parity, i, bs)              # update parity\n",
+    "        lower_tweak = list((i*2).to_bytes(bs/2, 'big'))         # convert i*2 to binary format\n",
+    "        block_tweak = createBlockHash(tweak_iv, lower_tweak)    # tweak digest\n",
     "        block_in = xor_bytes(pad_msg, block_tweak, i, bs)\n",
-    "        \n",
     "        cipher = Cipher(algorithms.AES(c_key), modes.ECB(), backend=default_backend()).encryptor()\n",
     "        ctxt_block = xor_bytes(cipher.update(block_in) + cipher.finalize(), block_tweak, 0, bs)\n",
     "        ctxt += ctxt_block\n",
