Last message block is now correctly handled

--- a/TP1/DH_DSA.ipynb
+++ b/TP1/DH_DSA.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,22 +155,41 @@
     "    bs = len(tweak_iv)*2\n",
     "    parity = bytes([0]*bs)\n",
     "    ptxt = bytes()\n",
+    "    pad_ctxt = pad_message(ctxt, bs)\n",
+    "    last_block_len = bs - (len(pad_ctxt) - len(ctxt))\n",
+    "    last_block_len_b = last_block_len.to_bytes(bs, 'big') #length of last cipher text block\n",
     "    \n",
-    "    for i in range(0, len(ctxt), bs):\n",
-    "        block_index = i // bs\n",
+    "    block_index = 0\n",
+    "    offset = 0\n",
+    "    block_count = (len(ctxt)-bs) // bs\n",
+    "    \n",
+    "    while block_index < block_count:\n",
     "        lower_tweak = list((block_index*2).to_bytes(bs//2, 'big'))         # convert i*2 to binary format\n",
     "        block_tweak = create_block_hash(tweak_iv, lower_tweak)             # tweak digest\n",
-    "        block_in = xor_bytes(ctxt, block_tweak, i, bs)\n",
+    "        block_in = xor_bytes(pad_ctxt, block_tweak, offset, bs)\n",
     "        ptxt_block = xor_bytes(cipher.update(block_in), block_tweak, 0, bs)\n",
     "        ptxt += ptxt_block\n",
     "        parity = xor_bytes(ptxt_block, parity, 0, bs)                      # update parity\n",
+    "        block_index += 1\n",
+    "        offset = block_index * 16\n",
     "    \n",
     "    ptxt += cipher.finalize()\n",
+    "    \n",
+    "    # Decipher last block\n",
+    "    cipher = Cipher(algorithms.AES(key), modes.ECB(), backend=default_backend()).encryptor()\n",
+    "    lower_tweak = list((block_index*2).to_bytes(bs//2, 'big'))         # convert i*2 to binary format\n",
+    "    block_tweak = create_block_hash(tweak_iv, lower_tweak)             # tweak digest\n",
+    "    block_in = xor_bytes(last_block_len_b, block_tweak, 0, bs)\n",
+    "    block_out = xor_bytes(cipher.update(block_in) + cipher.finalize(), block_tweak, 0, bs)\n",
+    "    last_block = xor_bytes(ctxt, block_out, offset, last_block_len) + bytes(bs-last_block_len)\n",
+    "    parity = xor_bytes(last_block, parity, 0, bs)\n",
+    "    ptxt += last_block\n",
+    "    \n",
     "    # verify cryptogram tag\n",
-    "    if(verify_tag(key, tweak_iv, tag, bs, len(ctxt)*8, parity)):\n",
+    "    if(verify_tag(key, tweak_iv, tag, bs, len(pad_ctxt)*8, parity)):\n",
     "        return ptxt\n",
     "    else: \n",
-    "        return None\n",
+    "       return None\n",
     "\n",
     "def sign_message(priv_key, msg):\n",
     "    \"\"\" Signs a particular message with a given private key\n",
@@ -190,7 +209,8 @@
     "def pad_message(msg, block_size):\n",
     "    if (len(msg) % block_size) != 0:\n",
     "        pad_size = block_size - (len(msg) % block_size)\n",
-    "        msg = bytes(list(msg).extend([0]*pad_size))\n",
+    "        msg = msg + bytes(pad_size)\n",
+    "        \n",
     "    return msg\n",
     "    \n",
     "def parity_block(tweak_iv, msg_len, bs, parity):\n",
@@ -210,21 +230,33 @@
     "    cipher = Cipher(algorithms.AES(key), modes.ECB(), backend=default_backend()).encryptor()\n",
     "    tweak_iv_l = list(tweak_iv)\n",
     "    bs = len(tweak_iv)*2\n",
-    "    # pad_msg = pad_message(msg, bs)\n",
-    "    pad_msg = msg\n",
+    "    pad_msg = pad_message(msg, bs)\n",
+    "    last_block_len = bs - (len(pad_msg) - len(msg))\n",
+    "    last_block_len_b = last_block_len.to_bytes(bs, 'big') #length of last cipher text block\n",
     "    parity = bytes([0]*bs)\n",
     "    ctxt = bytes()\n",
     "    \n",
-    "    for i in range(0, len(pad_msg), bs):\n",
-    "        block_index = (i // bs)\n",
-    "        parity = xor_bytes(pad_msg, parity, i, bs)              # update parity\n",
-    "        lower_tweak = list((block_index*2).to_bytes(bs//2, 'big'))         # convert i*2 to binary format\n",
-    "        block_tweak = create_block_hash(tweak_iv_l, lower_tweak)    # tweak digest\n",
-    "        block_in = xor_bytes(pad_msg, block_tweak, i, bs)\n",
+    "    block_index = 0\n",
+    "    offset = 0\n",
+    "    block_count = (len(pad_msg)-bs) // bs\n",
+    "    \n",
+    "    while block_index < block_count:\n",
+    "        parity = xor_bytes(pad_msg, parity, offset, bs)                         # update parity\n",
+    "        lower_tweak = list((block_index*2).to_bytes(bs//2, 'big'))              # convert i*2 to binary format\n",
+    "        block_tweak = create_block_hash(tweak_iv_l, lower_tweak)                # tweak digest\n",
+    "        block_in = xor_bytes(pad_msg, block_tweak, offset, bs)\n",
     "        ctxt_block = xor_bytes(cipher.update(block_in), block_tweak, 0, bs)\n",
     "        ctxt += ctxt_block\n",
+    "        block_index += 1\n",
+    "        offset = block_index * 16\n",
     "    \n",
-    "    ctxt += cipher.finalize()\n",
+    "    parity = xor_bytes(pad_msg, parity, offset, bs)\n",
+    "    lower_tweak = list((block_index*2).to_bytes(bs//2, 'big'))\n",
+    "    block_tweak = create_block_hash(tweak_iv_l, lower_tweak)           # tweak digest\n",
+    "    block_in = xor_bytes(last_block_len_b, block_tweak, 0, bs)           # xor last block length with tweak\n",
+    "    ctxt_block = xor_bytes(cipher.update(block_in), block_tweak, 0, bs)\n",
+    "    ctxt_block = xor_bytes(pad_msg, ctxt_block, offset, bs)[:last_block_len]\n",
+    "    ctxt += (ctxt_block + cipher.finalize())\n",
     "    \n",
     "    # Compute authentication tag\n",
     "    block_tag = parity_block(tweak_iv_l, len(pad_msg), bs, parity)\n",
@@ -269,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +338,7 @@
     "            conn_alive = True\n",
     "            \n",
     "            while conn_alive:\n",
-    "                content = '1234567890123456'.encode(\"ascii\")\n",
+    "                content = 'ola'.encode(\"ascii\")\n",
     "                # content = input(\"Enter a message to send to Receiver (to close the connection send 0): \")\n",
     "                \n",
     "                # Set tweak (nonce) to current time since epoch in seconds + 4 byte random value\n",
@@ -357,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,9 +438,7 @@
     "                        conn_alive = (msg != b\"0\")\n",
     "                    else:\n",
     "                        conn.send(b\"0\")\n",
-    "                        # Close compromised connection\n",
-    "                        conn_alive = False\n",
-    "                        print(\"Connection compromised\")\n",
+    "                        conn_alive = False  # Close compromised connection\n",
     "                        \n",
     "                    if conn_alive:\n",
     "                        payload = conn.recv()\n",
@@ -430,6 +460,15 @@
    "source": [
     "O estabelecimento de uma conexão entre os dois intervenientes (`Emitter` e `Receiver`)  é feita invocando o método `auto` da classe `Connection` que cria uma comunicação síncrona entre ambos. \n",
     "Este sincronismo é exigido pelo protocolo de troca de chaves (Diffie Hellman)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Connection(Emitter, Receiver, timeout=10).auto()"
    ]
   }
  ],
