--- a/TP1/ECDH_EDSA.ipynb
+++ b/TP1/ECDH_EDSA.ipynb
@@ -339,20 +339,15 @@
     "            # Generate shared secret\n",
     "            s_key = priv_key.exchange(ec.ECDH(), g_y)[:16]\n",
     "            \n",
-    "            conn_alive = True\n",
-    "            \n",
-    "            while conn_alive:\n",
-    "                content = 'ola'.encode(\"ascii\")\n",
-    "                # content = input(\"Enter a message to send to Receiver (to close the connection send 0): \")\n",
-    "                \n",
-    "                # Set tweak (nonce) to current time since epoch in seconds + 4 byte random value\n",
-    "                tweak = str(time.time()).encode(\"ascii\")[-4:]+os.urandom(4)\n",
-    "            \n",
-    "                payload = encrypt_message(content, tweak, s_key)\n",
-    "            \n",
-    "                conn.send(payload)\n",
-    "                resp = conn.recv()\n",
-    "                conn_alive = (resp != b\"0\")\n",
+    "            content = 'ola'.encode(\"ascii\")\n",
+    "            # content = input(\"Enter a message to send to Receiver (to close the connection send 0): \")\n",
+    "\n",
+    "            # Set tweak (nonce) to current time since epoch in seconds + 4 byte random value\n",
+    "            tweak = str(time.time()).encode(\"ascii\")[-4:]+os.urandom(4)\n",
+    "\n",
+    "            payload = encrypt_message(content, tweak, s_key)\n",
+    "\n",
+    "            conn.send(payload)\n",
     "        else:\n",
     "            if payload['msg'] != b\"0\":\n",
     "                sign = sign_message(sign_key, b\"0\")\n",
@@ -393,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,26 +416,19 @@
     "\n",
     "            s_key = priv_key.exchange(ec.ECDH(),g_x)[:16]\n",
     "            payload = conn.recv()\n",
-    "            conn_alive = True\n",
     "            \n",
     "            if payload != b\"0\":\n",
-    "                while conn_alive:\n",
-    "                    ctxt = payload['content']\n",
-    "                    tag = payload['tag']\n",
-    "                    tweak_iv = payload['tweak_iv']\n",
-    "                    \n",
-    "                    msg = decipher_message(s_key, tweak_iv, ctxt, tag)\n",
-    "                    \n",
-    "                    if msg:\n",
-    "                        conn.send(msg)\n",
-    "                        print(\"Received: \" + msg.decode(\"utf-8\"))\n",
-    "                        conn_alive = (msg != b\"0\")\n",
-    "                    else:\n",
-    "                        conn.send(b\"0\")\n",
-    "                        conn_alive = False  # Close compromised connection\n",
-    "                        \n",
-    "                    if conn_alive:\n",
-    "                        payload = conn.recv()            \n",
+    "                ctxt = payload['content']\n",
+    "                tag = payload['tag']\n",
+    "                tweak_iv = payload['tweak_iv']\n",
+    "\n",
+    "                msg = decipher_message(s_key, tweak_iv, ctxt, tag)\n",
+    "\n",
+    "                if msg:\n",
+    "                    conn.send(msg)\n",
+    "                    print(\"Received: \" + msg.decode(\"utf-8\"))\n",
+    "                else:\n",
+    "                    print(\"Verificação da mensagem recebida falhou!\")\n",
     "            else:\n",
     "                print(\"A verificação na troca de chaves falhou!\")\n",
     "        else:\n",
