Implemented TAES as a stand alone construction

--- a/TP1/DH_DSA.ipynb
+++ b/TP1/DH_DSA.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,6 +218,12 @@
     "    for i in range(0, bs):\n",
     "        xored_res.append(m1[offset+i] ^ m2[i])\n",
     "    return bytes(xored_res)\n",
+    "    \n",
+    "def taes_encrypt(msg, key):\n",
+    "    tweak_iv = os.urandom(8)\n",
+    "    payload = encrypt_message(msg, tweak_iv, key)\n",
+    "    payload = encrypt_message(msg, payload['tag'][:8], key)\n",
+    "    return payload\n",
     "    \n",
     "def encrypt_message(msg, tweak_iv, key):\n",
     "    \"\"\" Builds the cryptogram of a given message\n",
@@ -382,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,12 +427,9 @@
     "            s_key = priv_key.exchange(g_y)[:16]\n",
     "            \n",
     "            content = 'ola'.encode(\"ascii\")\n",
-    "            # content = input(\"Enter a msg to send to Receiver (to close send 0): \")\n",
-    "\n",
-    "            # Set tweak to current time since epoch (seconds) + 4 byte random value\n",
-    "            tweak = str(time.time()).encode(\"ascii\")[-4:]+os.urandom(4)\n",
-    "\n",
-    "            payload = encrypt_message(content, tweak, s_key)\n",
+    "            # content = input(\"Enter a message to send to Receiver (to close the connection send 0): \")\n",
+    "            \n",
+    "            payload = taes_encrypt(content, s_key)\n",
     "\n",
     "            conn.send(payload) \n",
     "        else:\n",
@@ -454,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
