--- a/TP2/Pergunta_3.ipynb
+++ b/TP2/Pergunta_3.ipynb
@@ -4,29 +4,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ECDSA - Elliptic Curve Digital Signature Algorithm"
+    "# ECDH - Elliptic Curve Diffie-Hellman"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "p = 2^521 - 1\n",
-    "F = GF(p)\n",
-    "A = p - 3\n",
-    "B = 1093849038073734274511112390766805569936207598951683748994586394495953116150735016013708737573759623248592132296706313309438452531591012912142327488478985984\n",
-    "q = 6864797660130609714981900799081393217269435300143305409394463459185543183397655394245057746333217197532963996371363321113864768612440380340372808892707005449\n",
-    "E = EllipticCurve([F(A), F(B)])\n",
-    "G = E.random_point()\n",
-    "G.set_order(q)"
+    "class ECDH:\n",
+    "    def __init__(self, n):\n",
+    "        K = GF(2^n);\n",
+    "        while True:\n",
+    "            b = K.random_element()\n",
+    "            E = EllipticCurve(K,[1,1,0,0,b]);\n",
+    "            m = E.order()\n",
+    "            lista_factores= list(factor(m))\n",
+    "            l = len(lista_factores)\n",
+    "            N = lista_factores[l-1][0]\n",
+    "            if N >= 2^(n-1):\n",
+    "                while True:\n",
+    "                    P = E.random_element()\n",
+    "                    Pord = P.order()\n",
+    "                    if Pord > N:\n",
+    "                        h = Pord/N\n",
+    "                        Q = h * P\n",
+    "                        return P,Q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "QQ.<x,y> = PolynomialRing(QQ,2)\n",
+    "phi = y^2 + x*y + x^3 + x^2 +b\n",
+    "P = E.random_point();P\n",
+    "P.order()\n",
+    "# Alice escolhe kA\n",
+    "kA = randint(1,P.order());kA\n",
+    "# Bob escolhe kB\n",
+    "kB = randint(1,P.order());kB\n",
+    "# Alice calcula PA=kA*P; Bob calcula PB=kB*P\n",
+    "PA = kA*P\n",
+    "PB = kB*P\n",
+    "PA,PB\n",
+    "#Alice calcula KA*PB; Bob calcula KB*PA\n",
+    "kA*PB == kB*PA"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 8.6",
+   "display_name": "SageMath 8.7",
    "language": "",
    "name": "sagemath"
   },
